--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     
 
-    <table class="table table-hover border">
+    <table class="table table-hover border table-responsive">
       <tr class="table-danger">
         <th>State name</th>
         <th>Active</th>
