--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </tr>
     </table>
 
-    <div class="float-right">For open source API <a href="https://api.covid19india.org/data.json">click here</a>.</div>
+    <div class="float-right p-2">For open source API <a href="https://api.covid19india.org/data.json" target="_blank">click here</a>.</div>
   </div>
 
     <script>
