--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
       width: max-content;
       margin: auto;
     }
+    .counter{
+      display: none;
+    }
+    .lastUpdate{
+      font-size: 12px;
+      margin: 0;
+    }
+    .table tr:nth-last-child(1){
+      background-color: #c2e1ff;
+      font-size: 20px;
+    }
+    .table td, .table th {
+      vertical-align: middle; 
+    }
+    .tableHead p,td p{
+      font-size: 11px;
+      margin: 0;
+      font-weight: 100;
+    }
     @media screen and (max-width: 768px) {
       .table{
           width: auto;
@@ -47,6 +66,14 @@
   </style>
 </head>
 <body ng-app="myApp">
+
+  <div class="counter float-right">
+    <!-- Start of WebFreeCounter Code -->
+    <a href="https://www.webfreecounter.com/" target="_blank">
+      <img src="https://www.webfreecounter.com/hit.php?id=guanppp&nd=6&style=11" border="0" alt="web counter">
+    </a>
+    <!-- End of WebFreeCounter Code -->
+  </div>
 
   <header>
     <div class="container">
@@ -68,21 +95,24 @@
 
     <table class="table table-hover border table-responsive">
       <thead>
-        <tr class="table-danger">
-          <th>State name</th>
-          <th>Active</th>
-          <th>Confirmed</th>
-          <th>Deaths</th>
-          <th>Recovered</th>
+        <tr class="tableHead">
+          <th>State name <p>&nbsp;</p></th>
+          <th>Active <p class="text-danger">New case</p></th>
+          <th>Confirmed <p class="text-danger">New Confirmes</p></th>
+          <th>Deaths <p class="text-danger">New death</p></th>
+          <th>Recovered <p class="text-danger">New recover</p></th>
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="x in names | orderBy:'state' | filter:test ">
-          <td>{{ x.state}}</td>
+        <tr ng-repeat="x in names | filter:test | orderBy:'-' ">
+          <td>
+          {{ x.state}}
+          <p class="lastUpdate text-primary">Last update : {{x.lastupdatedtime}}</p>
+        </td>
           <td>{{ x.active}}</td>
-          <td>{{ x.confirmed}}</td>
-          <td>{{ x.deaths}}</td>
-          <td>{{ x.recovered}}</td>
+          <td>{{ x.confirmed}}<p class="text-danger">{{x.deltaconfirmed}}</p></td>
+          <td>{{ x.deaths}}<p class="text-danger">{{x.deltadeaths}}</p></td>
+          <td>{{ x.recovered}}<p class="text-danger">{{x.deltarecovered}}</p></td>
         </tr>
       </tbody>
     </table>
@@ -99,17 +129,6 @@
             console.log(response.data.statewise);
           });
       });
-
-      // fetch('https://api.covid19india.org/data.json')
-      // .then((apidata)=>{
-      //   return apidata.json();
-      // }).then((actualdata)=>{
-      //   var x = actualdata.statewise[3].state;
-      //   console.log(actualdata.statewise);
-      //   document.getElementById("demo").innerHTML = x; 
-      // }).catch((error)=>{
-      //   console.log(error);
-      // });
     </script>
 </body>
 </html>
