add new parameteres

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div ng-controller="customersCtrl" class="container">
 
     <div class="d-flex">
-      <h2 class="mr-auto text-danger">Covid19 StateWise record</h2>
+      <h5 class="mr-auto text-danger">Covid19 StateWise Live Update</h5>
       <div class="p-2"><input type="text" ng-model='test' class="form-control" placeholder="Search your state"></div>
     </div>
     
